[APPBUG-5812] Fixes text being cutoff on quantity select node
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@83231 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global/selfCredit.css
+++ b/projects/Media/docroot/assets/css/global/selfCredit.css
@@ -923,7 +923,7 @@
 }
 
 .order-line .order-line-qty {
-  flex-basis: 7%;
+  flex-basis: 8%;
 }
 .order-line .disable-order-line {
   flex-basis: calc(42% + 15px);
